# tamubot

./: .ccstatusline-settings.json  .claude_notify.py  .claude_settings.json  .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  research_prompts.md  skills-lock.json
.devcontainer/: devcontainer.json
.streamlit/: config.toml
db/: comparison_schemas.py  generator.py  ingest.py  observability.py  reranker.py  router.py  search.py  setup_atlas.py
docs/: API_SAFETY.md  DOCKER_SETUP.md  MAIN_DRAWING.md  OBSERVABILITY.md  research_prompt.md  research_prompts.md
evals/: CLAUDE.md  adjudicate_golden_set.py  eval_chunking.py  eval_generator_tiered.py  eval_pipeline.py  eval_retrieval_metrics.py  eval_router_metrics.py  eval_statistics.py  generate_eval_draft.py  generate_golden_set.py  golden_set.py  import_eval_draft.py  migrate_golden_sets.py  refine_golden_references.py  run_benchmark.py  run_probe.py  validate_ragas.py
ingestion_pipeline/: CLAUDE.md  __init__.py  boilerplate_stripper.py  chunk_syllabi.py  chunker_v2.py  chunker_v3.py  ingest.py  ingest_v2.py  pipeline_logger.py  process_syllabi.py  process_syllabi_v2.py  process_syllabi_v3.py  rebuild_csv.py  refine_errors.py  setup_atlas.py  test_gemini_parse.py  v2_logger.py
legacy/: README.md
lightrag/: eval.py  ingest.py  ingest_670.py  inspect_670.py  query.py  test_one_course.py  wrappers.py
logs/: lightrag_iter6_8_findings.md
pipeline/: process_syllabi.py
rag/: CLAUDE.md  __init__.py  gates.py  (+16 more)
(+1902 files in other folders)
