[project]
name = "tamubot"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
v4 = [
    "langgraph>=1.1.2,<2.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0,<4.0.0",
    "haystack-ai>=2.25.2,<3.0.0",
    "mem0ai",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
