[project]
name = "tamubot"
version = "0.1.0"
requires-python = ">=3.14"

[project.optional-dependencies]
v4 = [
    "langgraph>=1.1.2,<2.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0,<4.0.0",
    "haystack-ai>=2.25.2,<3.0.0",
    "mem0ai",
]
spike = [
    "lightrag-hku",
]

[tool.setuptools.packages.find]
include = ["rag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["."]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"evals/*.py" = ["E501"]
"ingestion_pipeline/process_syllabi.py" = ["E501"]
"ingestion_pipeline/process_syllabi_v3.py" = ["E501"]
"ingestion_pipeline/legacy/standardize_syllabi.py" = ["E501"]
"ingestion_pipeline/test_gemini_parse.py" = ["E501"]
